Se sube nueva versión

--- a/style.css
+++ b/style.css
@@ -5,85 +5,68 @@
 }
 html{
     font-size: 62.5%;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Source Code Pro', monospace;
 }
-.main__container{
-    display: flex;
-    width: 80%;
-    height: 50rem;
-    margin: 10rem auto;
-    background-color: #9da2ab;
-    border: black solid 1rem;
-    border-radius: 2rem;
-    justify-content: center;
-}
-.main__container__section{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-.main__container__section h1{
-    text-align: center;
-    margin: auto;
-    font-size: 4rem;
-    width: 80%;
-    background-color: #0d324d;
-    color: white;
-    position: relative;
-    top: -2.61375rem;
-    border: #7f5a83 solid 0.5rem;
-    border-radius: 1rem; 
-}
-.form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-.form .input1, .input2, .input3{
-    font-size: 2rem;
-    margin: 3rem 0;
-    text-align: center;
-}
-.form .input1 input, .input2 input, .input3 input{
-    border-radius: 0.5rem;
-    border: black solid 0.3rem;
-}
-
-.form #button{
-	box-shadow:inset 0px 0px 15px 3px #23395e;
-	background:linear-gradient(to bottom, #2e466e 5%, #415989 100%);
-	background-color:#2e466e;
-	border-radius:17px;
-	border:1px solid #1f2f47;
-	cursor:pointer;
-	color:#ffffff;
-	font-size:2rem;
-	padding:6px 13px;
-	text-shadow:0px 1px 0px #263666;
-}
-.form #button:hover {
-	background:linear-gradient(to bottom, #415989 5%, #2e466e 100%);
-	background-color:#415989;
-}
-.form #button:active {
-	position:relative;
-	top:1px;
-}
-.main__container__section .respuesta__container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    width: 80%;
-    height: 10rem;
-    background-color: #0d324d;
-    color: white;
-    margin: 2.5rem 0;
-    border: #7f5a83 solid 0.5rem;
+body{
     border-radius: 1rem;
+    margin: 2rem 0;
+    max-width: 900px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 3rem auto;
+    min-width: 400px;
 }
-.main__container__section .respuesta__container p{
+.headerContainer{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 15rem;
+    background-color: #348AA7;
+}
+.headerContainer__title{
+    font-size: 5rem;
+    text-align: center;
+}
+.mainContainer{
+    width: 100%;
+}
+.mainContainer__description{
+    display: flex;
+    width: 100%;
+    background-color: #525174;
+    padding: 2rem;
+    justify-content: center;
+}
+.description__p{
     font-size: 2rem;
+    background-color: white;
+    text-align: center;
+}
+.mainContainer__form{
+    padding: 4rem 3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 50rem;
+    background-color: #513B56;
+}
+.mainContainer__form label{
+    color: white ;
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 1rem;
+}
+.mainContainer__form input{
+    margin-bottom: 4rem;
+    height: 4rem;
+    padding: 1rem;
+    text-align: center;
+    font-weight: bold;
+    font-size: 2rem;
+}
+button{
+    font-size: 3rem;
 }
